--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-iron-east-05.cleardb.net
 DB_PORT=3306
-DB_DATABASE=thutrinh
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_72fcadad8993d5a
+DB_USERNAME=baa45e6aa78346
+DB_PASSWORD=d104d2bf
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
