--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,16 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=thutrinh
+DB_USERNAME=root
+DB_PASSWORD=
+
+DB_CONNECTION=mysql
+DB_HOST=us-cdbr-iron-east-05.cleardb.net
+DB_PORT=3306
+DB_DATABASE=heroku_72fcadad8993d5a
+DB_USERNAME=baa45e6aa78346
+DB_PASSWORD=d104d2bf
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
